[package]
name = "referral_stats"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.147"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
